20160126 新增同步錄影、同步撥放 1.新增同步錄影功能 2.新增同步撥放功能 3.整理註解 4.加油!!

--- a/MultipleKinectMaster/Properties/Resources.resx
+++ b/MultipleKinectMaster/Properties/Resources.resx
@@ -123,6 +123,9 @@
   <data name="EventFileFilter" xml:space="preserve">
     <value>KStudio Event File</value>
   </data>
+  <data name="RecordingInProgressText" xml:space="preserve">
+    <value>Recording in progress</value>
+  </data>
   <data name="RunningStatusText" xml:space="preserve">
     <value>Running</value>
   </data>
